--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,10 @@
   <script src="lib/react-router.js"></script>
   <script src="lib/react-router-dom.js"></script>
   <script src="lib/axios.js"></script>
+  <script src="https://kit.fontawesome.com/40c9dcff5e.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="lib/animate.css" />
-  <link rel="stylesheet" href="assets/style/main.css" />
+  <link rel="stylesheet" href="assets/style/style.css" />
 
   <title>React Bug App</title>
 </head>
